tests/copies/newAndNeedChangeTests/pass/Throw.java
package pass;

public class Throw {
  public String testThrow(String returnString) {
    return returnString;
  }
}
