tests/copies/newAndNeedChangeTests/fail/Throw.java
package fail;

import java.lang.System;

public class Throw {

  public static void main(String[] args ) {
    throw = "hello!";
  }

}
